--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,34 @@
-# Python cache
-__pycache__/
-*.py[cod]
-*.class
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Jupyter Notebook checkpoints
-.ipynb_checkpoints/
+# Model files
+*.pkl
+*.pickle
+*.model
 
-# Virtual environments
-env/
-venv/
-.venv/
+# Data files (except creditcard.csv)
+*.zip
+*.tar.gz
+*.xlsx
+*.xls
 
-# IDE files
-.vscode/
-.idea/
+# Logs
+*.log
 
-# Ignore all CSV, H5, joblib files except creditcard.csv
-*.csv
-!creditcard.csv
-*.h5
-*.joblib
+# Output files
+outputs/
+results/
+plots/
+
+# Environment variables
+.env
+
+# pytest cache
+.pytest_cache/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
